feat: add dynamic agi provider for chat engine

--- a/.env.example
+++ b/.env.example
@@ -128,6 +128,9 @@ FAQ_ENABLED=false
 DYNAMIC_AI_CHAT_URL=
 DYNAMIC_AI_CHAT_KEY=
 DYNAMIC_AI_CHAT_TIMEOUT_MS=30000
+DYNAMIC_AGI_CHAT_URL=
+DYNAMIC_AGI_CHAT_KEY=
+DYNAMIC_AGI_CHAT_TIMEOUT_MS=45000
 
 # Economic data providers
 FRED_API_KEY=
