--- a/data/knowledge_base/research/manifest.json
+++ b/data/knowledge_base/research/manifest.json
@@ -19,6 +19,35 @@
         "trading": 515
       },
       "notes": "Preprocessed Dhivehi Radheef dictionary batches; ready for LoRA fine-tuning once checksum verification completes."
+    },
+    {
+      "slug": "market_structure_notes_v1",
+      "source": {
+        "one_drive_path": "OneDrive\\\\DynamicAI_DB\\\\knowledge_base\\\\research\\\\market_structure_slides",
+        "files": [
+          "market_structure_slides.zip"
+        ]
+      },
+      "processed_path": "data/knowledge_base/research/processed/trading_market_structure_corpus.jsonl",
+      "rows": 10,
+      "languages": {
+        "en": 10
+      },
+      "tags": {
+        "trading": 10,
+        "market_structure": 10,
+        "education": 1,
+        "taxonomy": 1,
+        "execution": 1,
+        "process": 2,
+        "multi_time_frame": 1,
+        "daily": 1,
+        "h4": 1,
+        "h1": 1,
+        "m15": 1,
+        "top_down": 1
+      },
+      "notes": "Text transcription of the market structure slide deck covering structure theory, multi-time-frame playbooks, and the top-down analysis workflow."
     }
   ]
 }
