--- a/data/knowledge_base/research/manifest.json
+++ b/data/knowledge_base/research/manifest.json
@@ -45,9 +45,10 @@
         "h4": 1,
         "h1": 1,
         "m15": 1,
-        "top_down": 1
+        "top_down": 1,
+        "checklist": 4
       },
-      "notes": "Text transcription of the market structure slide deck covering structure theory, multi-time-frame playbooks, and the top-down analysis workflow."
+      "notes": "Refined transcription of the market structure slide deck highlighting the tier hierarchy, execution discipline, timeframe checklists, and the top-down workflow in quick-reference format."
     }
   ]
 }
