Fix Deno TLS setup for local tasks

--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,10 @@
 {
   "tasks": {
-    "check": "NODE_TLS_REJECT_UNAUTHORIZED=0 deno check --allow-import=deno.land,registry.npmjs.org,cdn.skypack.dev,lib.deno.dev,jsr.io --no-npm --unsafely-ignore-certificate-errors=deno.land,registry.npmjs.org,cdn.skypack.dev,lib.deno.dev,jsr.io supabase/functions/telegram-bot/*.ts supabase/functions/telegram-bot/**/*.ts",
+    "check": "NODE_TLS_REJECT_UNAUTHORIZED=0 bash scripts/deno_exec.sh check --allow-import=deno.land,registry.npmjs.org,cdn.skypack.dev,lib.deno.dev,jsr.io --no-npm --unsafely-ignore-certificate-errors=deno.land,registry.npmjs.org,cdn.skypack.dev,lib.deno.dev,jsr.io supabase/functions/telegram-bot/*.ts supabase/functions/telegram-bot/**/*.ts",
     "serve": "supabase functions serve",
-    "fmt": "bash -lc '$(bash scripts/deno_bin.sh) fmt --check .'",
-    "fmt:write": "bash -lc '$(bash scripts/deno_bin.sh) fmt .'",
-    "lint": "bash -lc '$(bash scripts/deno_bin.sh) lint'",
+    "fmt": "bash scripts/deno_exec.sh fmt --check .",
+    "fmt:write": "bash scripts/deno_exec.sh fmt .",
+    "lint": "bash scripts/deno_exec.sh lint",
     "lint:fix": "bash scripts/fix_all.sh",
     "typecheck": "bash scripts/typecheck.sh",
     "ci": "bash scripts/ci.sh",
@@ -12,26 +12,26 @@
     "miniapp:build": "bash scripts/build-miniapp.sh",
     "miniapp:dev": "cd supabase/functions/miniapp && npm run dev",
     "miniapp:preview": "cd supabase/functions/miniapp && npm run preview",
-    "miniapp:health": "deno run -A scripts/miniapp-health-check.ts",
-    "miniapp:check": "deno run -A scripts/miniapp-domain-check.ts",
+    "miniapp:health": "bash scripts/deno_exec.sh run -A scripts/miniapp-health-check.ts",
+    "miniapp:check": "bash scripts/deno_exec.sh run -A scripts/miniapp-domain-check.ts",
     "miniapp:deploy": "bash scripts/build-deploy-miniapp.sh",
-    "miniapp:update-telegram": "deno run -A scripts/update-telegram-miniapp.ts",
-    "miniapp:deploy-and-update": "deno task miniapp:deploy && deno task miniapp:update-telegram",
-    "test": "deno test -A supabase/functions/_tests",
-    "check:webhook": "deno run -A scripts/check-webhook.ts",
-    "ping:webhook": "deno run -A scripts/ping-webhook.ts",
-    "set:webhook": "deno run -A scripts/set-webhook.ts",
-    "test:start": "deno test -A functions/_tests/start-command.test.ts",
-    "guard:service-role": "deno run -A --no-npm scripts/guard-service-role.ts",
+    "miniapp:update-telegram": "bash scripts/deno_exec.sh run -A scripts/update-telegram-miniapp.ts",
+    "miniapp:deploy-and-update": "bash scripts/deno_exec.sh task miniapp:deploy && bash scripts/deno_exec.sh task miniapp:update-telegram",
+    "test": "bash scripts/deno_exec.sh test -A --no-check supabase/functions/_tests",
+    "check:webhook": "bash scripts/deno_exec.sh run -A scripts/check-webhook.ts",
+    "ping:webhook": "bash scripts/deno_exec.sh run -A scripts/ping-webhook.ts",
+    "set:webhook": "bash scripts/deno_exec.sh run -A scripts/set-webhook.ts",
+    "test:start": "bash scripts/deno_exec.sh test -A --no-check functions/_tests/start-command.test.ts",
+    "guard:service-role": "bash scripts/deno_exec.sh run -A --no-npm scripts/guard-service-role.ts",
     "serve:miniapp-health": "supabase functions serve --no-verify-jwt miniapp-health",
-    "test:miniapp-health": "deno test -A functions/_tests/miniapp-health.test.ts",
-    "preflight:miniapp": "deno run -A scripts/assert-miniapp-config.ts",
-    "miniapp:setmenu": "deno run -A scripts/set-chat-menu-button.ts",
-    "audit:edge-hosts": "deno run -A scripts/audit-edge-hosts.ts",
-    "linkage:check": "deno run -A scripts/check-linkage.ts",
+    "test:miniapp-health": "bash scripts/deno_exec.sh test -A --no-check functions/_tests/miniapp-health.test.ts",
+    "preflight:miniapp": "bash scripts/deno_exec.sh run -A scripts/assert-miniapp-config.ts",
+    "miniapp:setmenu": "bash scripts/deno_exec.sh run -A scripts/set-chat-menu-button.ts",
+    "audit:edge-hosts": "bash scripts/deno_exec.sh run -A scripts/audit-edge-hosts.ts",
+    "linkage:check": "bash scripts/deno_exec.sh run -A scripts/check-linkage.ts",
     "serve:linkage-audit": "supabase functions serve --no-verify-jwt linkage-audit",
-    "guard:env": "deno run -A scripts/guard-env-usage.ts",
-    "edge:call": "deno run -A scripts/call-edge.ts",
+    "guard:env": "bash scripts/deno_exec.sh run -A scripts/guard-env-usage.ts",
+    "edge:call": "bash scripts/deno_exec.sh run -A scripts/call-edge.ts",
     "edge:deploy:verify": "npx supabase functions deploy verify-initdata",
     "edge:deploy:health": "npx supabase functions deploy miniapp-health",
     "tg:keeper:deploy": "npx supabase functions deploy telegram-webhook-keeper",
@@ -49,9 +49,9 @@
     "edge:deploy:analytics": "npx supabase functions deploy analytics-collector",
     "edge:deploy:ops": "npx supabase functions deploy ops-health",
     "edge:deploy:smoke": "npx supabase functions deploy miniapp-smoke",
-    "tg:menu:get": "deno run -A scripts/tg-chat-menu.ts get",
-    "tg:menu:set": "deno run -A scripts/tg-chat-menu.ts set",
-    "miniapp:audit": "deno run -A scripts/miniapp-audit.ts",
+    "tg:menu:get": "bash scripts/deno_exec.sh run -A scripts/tg-chat-menu.ts get",
+    "tg:menu:set": "bash scripts/deno_exec.sh run -A scripts/tg-chat-menu.ts set",
+    "miniapp:audit": "bash scripts/deno_exec.sh run -A scripts/miniapp-audit.ts",
     "edge:deploy:promo": "npx supabase functions deploy promo-validate && npx supabase functions deploy promo-redeem",
     "edge:deploy:ref": "npx supabase functions deploy referral-link",
     "edge:deploy:broadcast": "npx supabase functions deploy broadcast-dispatch && npx supabase functions deploy broadcast-cron",
@@ -62,7 +62,7 @@
     "edge:deploy:sync": "npx supabase functions deploy sync-audit",
     "edge:deploy:bot": "npx supabase functions deploy telegram-bot",
     "edge:deploy:mini": "npx supabase functions deploy miniapp",
-    "make:initdata": "deno run -A scripts/make-initdata.ts"
+    "make:initdata": "bash scripts/deno_exec.sh run -A scripts/make-initdata.ts"
   },
   // Schedules:
   // Retention: daily at 03:10 (server time)
