--- a/data/knowledge_base/research/manifest.json
+++ b/data/knowledge_base/research/manifest.json
@@ -49,6 +49,30 @@
         "checklist": 4
       },
       "notes": "Refined transcription of the market structure slide deck highlighting the tier hierarchy, execution discipline, timeframe checklists, and the top-down workflow in quick-reference format."
+    },
+    {
+      "slug": "nemotron_personas_japan_v1",
+      "source": {
+        "huggingface": "nvidia/Nemotron-Personas-Japan",
+        "homepage": "https://huggingface.co/datasets/nvidia/Nemotron-Personas-Japan"
+      },
+      "processed_path": "data/knowledge_base/research/processed/nemotron_personas_japan.jsonl",
+      "sample_path": "data/knowledge_base/research/processed/nemotron_personas_japan_sample.jsonl",
+      "summary_path": "data/knowledge_base/research/processed/nemotron_personas_japan_summary.json",
+      "sample_rows": 12,
+      "rows": 1000000,
+      "languages": {
+        "ja": 1000000
+      },
+      "tags": {
+        "synthetic": 1000000,
+        "personas": 1000000,
+        "demographics": 1000000,
+        "sovereign_ai": 1000000
+      },
+      "license": "CC-BY-4.0",
+      "release_date": "2025-09-23",
+      "notes": "NVIDIA's synthetic persona corpus covering one million Japanese-language personas grounded in census-aligned demographics, geography, and cultural context for sovereign AI workloads."
     }
   ]
 }
