--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,6 +64,9 @@
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
     "@vercel/otel": "^1.13.0",
+    "@web3-onboard/bitget": "^2.1.1",
+    "@web3-onboard/core": "^2.24.1",
+    "@web3-onboard/injected-wallets": "^2.11.3",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
