--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,9 +64,9 @@
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
     "@vercel/otel": "^1.13.0",
-    "@web3-onboard/bitget": "^2.1.1",
-    "@web3-onboard/core": "^2.24.1",
-    "@web3-onboard/injected-wallets": "^2.11.3",
+    "@web3-onboard/bitget": "^2.0.1",
+    "@web3-onboard/core": "^2.2.12",
+    "@web3-onboard/injected-wallets": "^2.10.17",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
@@ -82,7 +82,7 @@
     "lucide-react": "^0.544.0",
     "mime-types": "^3.0.1",
     "next": "^15.5.4",
-    "next-auth": "5.0.0-beta.29",
+    "next-auth": "4.24.7",
     "next-mdx-remote": "^5.0.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
