--- a/package.json
+++ b/package.json
@@ -91,13 +91,14 @@
     "@tanstack/react-query": "^5.90.2",
     "@upstash/redis": "^1.35.4",
     "@vercel/otel": "^1.13.0",
+    "@web3-onboard/core": "2.2.12",
     "compressorjs": "^1.2.1",
     "framer-motion": "^12.23.22",
     "inngest": "^3.40.3",
     "lovable-tagger": "^1.1.10",
     "lucide-react": "^0.544.0",
     "mime-types": "^3.0.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.7",
     "posthog-js": "^1.268.8",
     "prismjs": "^1.30.0",
     "sonner": "^2.0.7"
