--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     "@tanstack/react-query": "^5.90.2",
     "@upstash/redis": "^1.35.4",
     "@vercel/otel": "^1.13.0",
+    "@web3-onboard/bitget": "^2.1.1",
+    "@web3-onboard/core": "^2.24.1",
+    "@web3-onboard/injected-wallets": "^2.11.3",
     "compressorjs": "^1.2.1",
     "framer-motion": "^12.23.22",
     "inngest": "^3.40.3",
