--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -82,7 +82,7 @@
     "lucide-react": "^0.544.0",
     "mime-types": "^3.0.1",
     "next": "^15.5.4",
-    "next-auth": "5.0.0-beta.29",
+    "next-auth": "^4.24.7",
     "next-mdx-remote": "^5.0.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
