Add drip campaign sequencing and automation

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,10 @@ NEXT_PUBLIC_SITE_URL=https://example.com/
 NEXT_PUBLIC_API_URL=https://api.example.com
 ALLOWED_ORIGINS=https://example.com,https://api.example.com
 
+# Email delivery
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=team@dynamiccapital.com
+
 # Commit + health endpoints
 HEALTH_URL=
 
