--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -65,6 +65,7 @@
     "@tanstack/react-query": "^5.90.2",
     "@vercel/otel": "^1.13.0",
     "@web3-onboard/bitget": "^2.0.1",
+    "@web3-onboard/common": "2.2.2",
     "@web3-onboard/core": "^2.2.12",
     "@web3-onboard/injected-wallets": "^2.10.17",
     "axios": "^1.11.0",
