--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@tanstack/react-query": "^5.90.2",
     "@upstash/redis": "^1.35.4",
     "@vercel/otel": "^1.13.0",
+    "@web3-onboard/common": "2.2.2",
     "@web3-onboard/core": "2.2.12",
     "compressorjs": "^1.2.1",
     "framer-motion": "^12.23.22",
