Make web3 onboarding configurable

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -22,6 +22,11 @@ NEXT_PUBLIC_TELEGRAM_WEBHOOK_SECRET=
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
 NEXT_PUBLIC_SENTRY_DSN=
+NEXT_PUBLIC_WEB3_APP_NAME=Dynamic Capital
+NEXT_PUBLIC_WEB3_APP_DESCRIPTION=Dynamic Capital trading desk and portfolio tools
+NEXT_PUBLIC_WEB3_APP_ICON=https://example.com/logo.svg
+NEXT_PUBLIC_WEB3_CHAINS=[{"id":"0x1","token":"ETH","label":"Ethereum Mainnet","rpcUrl":"https://rpc.ankr.com/eth"}]
+NEXT_PUBLIC_WEB3_RECOMMENDED_WALLETS=[{"name":"Bitget Wallet","url":"https://bitkeep.com"},{"name":"MetaMask","url":"https://metamask.io"}]
 
 # Economic calendar feed
 NEXT_PUBLIC_ECONOMIC_CALENDAR_URL=https://api.example.com/economic-calendar
