--- a/dynamic-capital-ton/apps/miniapp/public/tonconnect-manifest.json
+++ b/dynamic-capital-ton/apps/miniapp/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-  "url": "https://dynamic-capital.ondigitalocean.app",
+  "url": "https://www.dynamiccapital.ton",
   "name": "Dynamic Capital",
-  "iconUrl": "https://dynamic-capital.ondigitalocean.app/icon.png",
+  "iconUrl": "https://www.dynamiccapital.ton/icon.png",
   "termsOfUseUrl": "https://dynamic.capital/terms",
   "privacyPolicyUrl": "https://dynamic.capital/privacy"
 }
