--- a/dynamic-capital-ton/apps/miniapp/package.json
+++ b/dynamic-capital-ton/apps/miniapp/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.3",
+    "@ton/core": "^0.58.1",
     "@tonconnect/ui-react": "^2.3.1",
+    "buffer": "^6.0.3",
     "next": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
