--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "chokidar-cli": "^3.0.0",
     "deno": "^2.5.0",
     "dotenv": "^17.2.3",
+    "firecrawl": "^1.21.1",
     "ngrok": "^5.0.0-beta.2",
     "supabase": "^2.47.2",
     "tsx": "^4.20.6",
