--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,10 @@
   "outputDirectory": "apps/web/.next",
   "devCommand": "npm run dev -- --port $PORT",
   "env": {
-    "SITE_URL": "https://dynamic-capital.ondigitalocean.app",
-    "NEXT_PUBLIC_SITE_URL": "https://dynamic-capital.ondigitalocean.app",
-    "ALLOWED_ORIGINS": "https://dynamic-capital.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app",
-    "MINIAPP_ORIGIN": "https://dynamic-capital.ondigitalocean.app",
-    "TELEGRAM_WEBHOOK_URL": "https://dynamic-capital.ondigitalocean.app/webhook"
+    "SITE_URL": "https://dynamiccapital.ton",
+    "NEXT_PUBLIC_SITE_URL": "https://dynamiccapital.ton",
+    "ALLOWED_ORIGINS": "https://dynamiccapital.ton,https://www.dynamiccapital.ton,https://dynamic-capital.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app",
+    "MINIAPP_ORIGIN": "https://dynamiccapital.ton",
+    "TELEGRAM_WEBHOOK_URL": "https://dynamiccapital.ton/webhook"
   }
 }
