--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "lucide-react": "^0.544.0",
     "mime-types": "^3.0.1",
     "next-auth": "^4.24.7",
+    "pdf-parse": "^1.1.1",
     "posthog-js": "^1.268.8",
     "prismjs": "^1.30.0",
     "sonner": "^2.0.7"
