--- a/project.toml
+++ b/project.toml
@@ -30,7 +30,7 @@ version = "0.0.0"
 
   [[build.env]]
     name = "ALLOWED_ORIGINS"
-    value = "https://dynamiccapital.ton,https://www.dynamiccapital.ton,https://dynamic-capital.ondigitalocean.app,https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app"
+    value = "https://dynamiccapital.ton,https://www.dynamiccapital.ton,https://dynamiccapital.to,https://www.dynamiccapital.to,https://dynamic-capital.ondigitalocean.app,https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app,tonsite://dynamiccapital.ton"
 
   [[build.env]]
     name = "SITE_URL"
