Add Dynamic TON webhook secret helper

--- a/.env.example
+++ b/.env.example
@@ -88,6 +88,7 @@ NEXT_PUBLIC_ECONOMIC_CALENDAR_API_KEY=
 TRADINGVIEW_WEBHOOK_SECRET=
 TRADING_SIGNALS_WEBHOOK_SECRET=
 SUPABASE_SIGNALS_CHANNEL=
+DYNAMIC_TON_API_KEY=
 EXNESS_MT5_LOGIN=
 EXNESS_MT5_PASSWORD=
 EXNESS_MT5_SERVER=
