--- a/supabase/functions/.env.example
+++ b/supabase/functions/.env.example
@@ -19,6 +19,7 @@ TELEGRAM_ID=
 MINI_APP_URL=
 MINI_APP_SHORT_NAME=
 MINIAPP_ORIGIN=
+DYNAMIC_TON_API_KEY=
 ADMIN_API_SECRET=
 SESSION_JWT_SECRET=
 OPENAI_API_KEY=
