Configure TON allocator webhook secret and tests

--- a/supabase/functions/.env.example
+++ b/supabase/functions/.env.example
@@ -33,6 +33,7 @@ WINDOW_SECONDS=
 RATE_LIMIT_PER_MINUTE=
 BENEFICIARY_TABLE=
 TRADING_SIGNALS_WEBHOOK_SECRET=
+TON_ALLOCATOR_WEBHOOK_SECRET=
 SUPABASE_SIGNALS_CHANNEL=
 EXNESS_MT5_LOGIN=
 EXNESS_MT5_PASSWORD=
