--- a/dynamic-capital-ton/apps/miniapp/tsconfig.json
+++ b/dynamic-capital-ton/apps/miniapp/tsconfig.json
@@ -5,13 +5,41 @@
     "strict": true,
     "jsx": "preserve",
     "moduleResolution": "Node",
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": [
+        "../../../shared/*"
+      ]
+    },
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
-    "types": ["node"]
+    "types": [
+      "node"
+    ],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
