Add TON gateway fallback for web and mini app

--- a/dynamic-capital-ton/apps/miniapp/public/tonconnect-manifest.json
+++ b/dynamic-capital-ton/apps/miniapp/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-  "url": "https://www.dynamiccapital.ton",
+  "url": "https://ton.site/dynamiccapital.ton",
   "name": "Dynamic Capital",
-  "iconUrl": "https://www.dynamiccapital.ton/icon.png",
+  "iconUrl": "https://ton.site/dynamiccapital.ton/icon.png",
   "termsOfUseUrl": "https://dynamic.capital/terms",
   "privacyPolicyUrl": "https://dynamic.capital/privacy"
 }
