--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     "@tanstack/react-query": "^5.90.2",
     "@upstash/redis": "^1.35.4",
     "@vercel/otel": "^1.13.0",
-    "@web3-onboard/common": "2.2.2",
-    "@web3-onboard/core": "2.2.12",
+    "@web3-onboard/common": "^2.4.2",
+    "@web3-onboard/core": "^2.24.1",
     "compressorjs": "^1.2.1",
     "framer-motion": "^12.23.22",
     "inngest": "^3.40.3",
@@ -120,6 +120,25 @@
     },
     "@esbuild-kit/esm-loader@2.6.5": {
       "esbuild": "npm:esbuild@0.25.10"
+    },
+    "elliptic": "^6.6.1",
+    "svelte": "^4.2.19",
+    "ws": "^8.18.3",
+    "@ethersproject/providers": {
+      "ws": "7.5.10"
+    },
+    "nanoid": "^5.1.6",
+    "crypto-es": "^3.1.2",
+    "bnc-sdk": {
+      "crypto-es": "^3.1.2",
+      "nanoid": "^5.1.6"
+    },
+    "@web3-onboard/core": {
+      "svelte": "^4.2.19",
+      "bnc-sdk": {
+        "crypto-es": "^3.1.2",
+        "nanoid": "^5.1.6"
+      }
     }
   }
 }
