--- a/dns/dynamic-capital.lovable.app.json
+++ b/dns/dynamic-capital.lovable.app.json
@@ -1,18 +1,22 @@
 {
   "domain": "dynamic-capital.lovable.app",
   "records": [
-    { "type": "A", "name": "@", "data": "162.159.140.98", "ttl": 3600 },
-    { "type": "A", "name": "@", "data": "172.66.0.96", "ttl": 3600 },
+    {
+      "type": "CNAME",
+      "name": "@",
+      "data": "dynamiccapital.ton",
+      "ttl": 3600
+    },
     {
       "type": "CNAME",
       "name": "www",
-      "data": "dynamic-capital.lovable.app",
+      "data": "dynamiccapital.ton",
       "ttl": 3600
     },
     {
       "type": "CNAME",
       "name": "api",
-      "data": "dynamic-capital.lovable.app",
+      "data": "dynamiccapital.ton",
       "ttl": 3600
     }
   ]
