fix: default server binding when HOSTNAME is external

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ NEXT_PUBLIC_ENV=development
 NEXT_PUBLIC_COMMIT_SHA=
 
 # Supabase (shared across apps and functions)
-SUPABASE_URL=https://qeejuomcapbdlhnjqjcc.supabase.co
+# Use placeholder values here; never commit real credentials.
+SUPABASE_URL=https://your-project-ref.supabase.co
 SUPABASE_PROJECT_REF=
 SUPABASE_PROJECT_ID=
 SUPABASE_DB_PASSWORD=
@@ -16,7 +17,8 @@ SUPABASE_DB_URL=
 SUPABASE_FN_URL=
 SUPABASE_ACCESS_TOKEN=
 DATABASE_URL=
-NEXT_PUBLIC_SUPABASE_URL=https://qeejuomcapbdlhnjqjcc.supabase.co
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
+# Safe to expose in clients, but keep a placeholder to avoid copying live keys.
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Deployment platform access
@@ -46,6 +48,7 @@ ALLOWED_ORIGINS=https://example.com,https://api.example.com
 HEALTH_URL=
 
 # Telegram bot + mini app
+# Populate these only in secure env vars; never commit live tokens.
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_APP_ID=
 TELEGRAM_APP_HASH=
