--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,6 +63,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
+    "@tonconnect/ui-react": "^2.3.1",
     "@vercel/otel": "^1.13.0",
     "@web3-onboard/bitget": "^2.1.1",
     "@web3-onboard/common": "^2.4.2",
@@ -103,6 +104,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^5.0.0",
     "three": "^0.165.0",
+    "ton": "^13.9.0",
+    "tonweb": "^0.0.66",
     "transliteration": "^2.3.5",
     "tzdata": "^1.0.1",
     "vaul": "^1.1.2",
