--- a/package.json
+++ b/package.json
@@ -83,31 +83,13 @@
     "yaml": "^2.8.1"
   },
   "dependencies": {
-    "@auth/supabase-adapter": "^1.10.0",
     "@aws-sdk/client-s3": "^3.899.0",
-    "@headlessui/react": "^2.2.9",
-    "@heroicons/react": "^2.2.0",
-    "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/ssr": "^0.7.0",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@tanstack/react-query": "^5.90.2",
     "@upstash/redis": "^1.35.4",
-    "@vercel/otel": "^1.13.0",
-    "@web3-onboard/common": "^2.4.2",
-    "@web3-onboard/core": "^2.24.1",
-    "compressorjs": "^1.2.1",
-    "framer-motion": "^12.23.22",
     "grammy": "^1.38.2",
-    "inngest": "^3.40.3",
     "lovable-tagger": "^1.1.10",
-    "lucide-react": "^0.544.0",
     "mime-types": "^3.0.1",
-    "next-auth": "^4.24.7",
     "openai": "^6.0.1",
-    "pdf-parse": "^1.1.1",
-    "posthog-js": "^1.268.8",
-    "prismjs": "^1.30.0",
-    "sonner": "^2.0.7"
+    "pdf-parse": "^1.1.1"
   },
   "overrides": {
     "esbuild": "^0.25.10",
