--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "~/*": ["./src/*"],
       "next/font/google": ["./src/stubs/next-font-google.ts"]
     },
-    "types": ["vite/client"]
+    "types": ["vitest/globals", "@testing-library/jest-dom", "vite/client"]
   },
   "include": ["src", "apps/web", "shared"],
   "exclude": ["node_modules"]
