feat: add protected route auth handlers

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -7,6 +7,7 @@ NEXT_PUBLIC_SITE_URL=https://example.com/
 NEXT_PUBLIC_API_URL=https://api.example.com
 MINIAPP_ORIGIN=https://miniapp.example.com
 ALLOWED_ORIGINS=https://example.com,https://api.example.com
+ROUTE_GUARD_PASSWORD=super-secret-password
 
 # Supabase client credentials
 SUPABASE_URL=https://qeejuomcapbdlhnjqjcc.supabase.co
