--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "dynamic-capital",
   "private": true,
+  "type": "module",
+  "packageManager": "npm@11.4.2",
   "workspaces": [
     "apps/*"
   ],
   "engines": {
     "node": "^20"
   },
-  "type": "module",
   "scripts": {
     "build": "node scripts/npm-safe.mjs run build:web && node scripts/npm-safe.mjs run build:landing",
     "build:landing": "node scripts/npm-safe.mjs -w apps/landing run build",
@@ -72,16 +73,6 @@
     "tunnel:functions": "node scripts/ngrok-http.mjs",
     "ton:generate-adnl": "tsx tools/ton/generate-adnl.ts"
   },
-  "devDependencies": {
-    "chokidar-cli": "^3.0.0",
-    "deno": "^2.5.0",
-    "dotenv": "^17.2.3",
-    "firecrawl": "^1.21.1",
-    "ngrok": "^5.0.0-beta.2",
-    "supabase": "^2.47.2",
-    "tsx": "^4.20.6",
-    "yaml": "^2.8.1"
-  },
   "dependencies": {
     "@auth/supabase-adapter": "^1.10.0",
     "@aws-sdk/client-s3": "^3.899.0",
@@ -114,6 +105,16 @@
     "prismjs": "^1.30.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7"
+  },
+  "devDependencies": {
+    "chokidar-cli": "^3.0.0",
+    "deno": "^2.5.0",
+    "dotenv": "^17.2.3",
+    "firecrawl": "^1.21.1",
+    "ngrok": "^5.0.0-beta.2",
+    "supabase": "^2.47.2",
+    "tsx": "^4.20.6",
+    "yaml": "^2.8.1"
   },
   "overrides": {
     "esbuild": "^0.25.10",
