--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -19,6 +19,7 @@ SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role
 SUPABASE_PROJECT_REF=qeejuomcapbdlhnjqjcc
 
 # Client-side integrations
+NEXT_PUBLIC_MINI_APP_URL=https://miniapp.example.com/
 NEXT_PUBLIC_TELEGRAM_WEBHOOK_SECRET=
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
@@ -28,6 +29,8 @@ NEXT_PUBLIC_WEB3_APP_DESCRIPTION=Dynamic Capital trading desk and portfolio tool
 NEXT_PUBLIC_WEB3_APP_ICON=https://example.com/logo.svg
 NEXT_PUBLIC_WEB3_CHAINS=[{"id":"0x1","token":"ETH","label":"Ethereum Mainnet","rpcUrl":"https://rpc.ankr.com/eth"}]
 NEXT_PUBLIC_WEB3_RECOMMENDED_WALLETS=[{"name":"Bitget Wallet","url":"https://bitkeep.com"},{"name":"MetaMask","url":"https://metamask.io"}]
+NEXT_PUBLIC_LAYERZERO_ENV=mainnet
+NEXT_PUBLIC_LAYERZERO_ENDPOINTS=[{"key":"ethereum-mainnet","name":"Ethereum Mainnet","eid":30101,"network":"mainnet","chainId":1,"rpcUrl":"https://rpc.ankr.com/eth","explorerUrl":"https://layerzeroscan.com/?network=mainnet&chain=ethereum"}]
 
 # Economic calendar feed
 NEXT_PUBLIC_ECONOMIC_CALENDAR_URL=https://api.example.com/economic-calendar
