feat: use open economic calendar feed

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -33,7 +33,7 @@ NEXT_PUBLIC_LAYERZERO_ENV=mainnet
 NEXT_PUBLIC_LAYERZERO_ENDPOINTS=[{"key":"ethereum-mainnet","name":"Ethereum Mainnet","eid":30101,"network":"mainnet","chainId":1,"rpcUrl":"https://rpc.ankr.com/eth","explorerUrl":"https://layerzeroscan.com/?network=mainnet&chain=ethereum"}]
 
 # Economic calendar feed
-NEXT_PUBLIC_ECONOMIC_CALENDAR_URL=https://api.example.com/economic-calendar
+NEXT_PUBLIC_ECONOMIC_CALENDAR_URL=https://nfs.faireconomy.media/ff_calendar_thisweek.json
 NEXT_PUBLIC_ECONOMIC_CALENDAR_API_KEY=
 # Server-side integrations
 BINANCE_PAY_API_KEY=
