--- a/dynamic-capital-ton/apps/bot/package.json
+++ b/dynamic-capital-ton/apps/bot/package.json
@@ -2,6 +2,11 @@
   "name": "dynamic-capital-bot",
   "private": true,
   "type": "module",
+  "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "dev": "ts-node --esm index.ts",
+    "start": "node dist/index.js"
+  },
   "dependencies": {
     "telegraf": "^4.15.0"
   },
