Document Supabase project URL fallback

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ NEXT_PUBLIC_COMMIT_SHA=
 # Supabase (shared across apps and functions)
 # Use placeholder values here; never commit real credentials.
 SUPABASE_URL=https://your-project-ref.supabase.co
+SUPABASE_PROJECT_URL=https://your-project-ref.supabase.co
 SUPABASE_PROJECT_REF=
 SUPABASE_PROJECT_ID=
 SUPABASE_DB_PASSWORD=
