--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "env:sync": "tsx scripts/env/sync.ts",
     "env:report": "tsx scripts/env/report.ts",
     "scan:checklists": "tsx scripts/scan-checklists.ts",
+    "crawlers:install": "node scripts/install-crawlers.mjs",
     "do:sync-site": "node scripts/digitalocean/sync-site-config.mjs",
     "do:sync-cdn": "node scripts/digitalocean/sync-cdn-config.mjs",
     "doctl:sync-site": "node scripts/doctl/sync-site-config.mjs",
