Automate Dynamic Capital favicon asset generation

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,7 @@ bun.lockb
 .project-cache/
 # Python bytecode cache directories
 __pycache__/
+apps/web/public/apple-touch-icon.png
+apps/web/public/icon-mark-512.png
+apps/web/public/favicon.ico
+apps/web/public/.brand-icons.json
