--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
   "url": "https://dynamic-capital.lovable.app",
   "name": "Dynamic Capital",
-  "iconUrl": "https://dynamic-capital.lovable.app/favicon.ico",
+  "iconUrl": "https://dynamic-capital.lovable.app/icon-mark.svg",
   "termsOfUseUrl": "https://dynamic-capital.lovable.app/terms",
   "privacyPolicyUrl": "https://dynamic-capital.lovable.app/privacy"
 }
