Configure dynamic REST cache TTL via env

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ NODE_ENV=development
 NEXT_PUBLIC_ENV=development
 NEXT_PUBLIC_COMMIT_SHA=
 
+# API caching
+CACHE_TTL_SECONDS=300
+
 # Supabase (shared across apps and functions)
 # Use placeholder values here; never commit real credentials.
 SUPABASE_URL=https://your-project-ref.supabase.co
