feat: add websocket relay edge function

--- a/.env.example
+++ b/.env.example
@@ -126,6 +126,8 @@ TWITTER_SENTIMENT_QUERY=(forex OR crypto) lang:en
 
 # AI integrations
 OPENAI_API_KEY=
+# Optional: override the default model when relaying to the OpenAI Realtime API
+OPENAI_REALTIME_MODEL=
 OPENAI_WEBHOOK_SECRET=
 OPENAI_ENABLED=false
 ANTHROPIC_API_KEY=
