Enable dynamic intelligence providers with demo fallbacks

--- a/.env.example
+++ b/.env.example
@@ -139,6 +139,9 @@ DYNAMIC_AI_CHAT_TIMEOUT_MS=30000
 DYNAMIC_AGI_CHAT_URL=
 DYNAMIC_AGI_CHAT_KEY=
 DYNAMIC_AGI_CHAT_TIMEOUT_MS=45000
+DYNAMIC_AGS_PLAYBOOK_URL=
+DYNAMIC_AGS_PLAYBOOK_KEY=
+DYNAMIC_AGS_TIMEOUT_MS=45000
 
 # Economic data providers
 FRED_API_KEY=
