chore: install lint and test dependencies

--- a/package.json
+++ b/package.json
@@ -115,12 +115,15 @@
     "deno": "^2.5.0",
     "dotenv": "^17.2.3",
     "firecrawl": "^1.21.1",
+    "globals": "^16.4.0",
     "ngrok": "^5.0.0-beta.2",
     "png-to-ico": "^2.1.8",
     "sharp": "^0.33.5",
     "supabase": "^2.47.2",
     "tsx": "^4.20.6",
-    "yaml": "^2.8.1"
+    "vitest": "^2.1.4",
+    "yaml": "^2.8.1",
+    "@testing-library/jest-dom": "^6.6.3"
   },
   "overrides": {
     "esbuild": "^0.25.10",
