--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -87,7 +87,7 @@
     "lucide-react": "^0.544.0",
     "mime-types": "^3.0.1",
     "next": "^15.5.4",
-    "next-auth": "^4.24.7",
+    "next-auth": "^4.24.11",
     "next-mdx-remote": "^5.0.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
@@ -145,6 +145,7 @@
     "vitest": "^2.1.4"
   },
   "overrides": {
+    "esbuild": "npm:esbuild@0.25.10",
     "@esbuild-kit/core-utils": {
       "esbuild": "npm:esbuild@0.25.10"
     },
