--- a/dynamic_crawlers/requirements-github.txt
+++ b/dynamic_crawlers/requirements-github.txt
@@ -1,2 +1,3 @@
 crawl4ai @ git+https://github.com/unclecode/crawl4ai
 scrapegraphai @ git+https://github.com/ScrapeGraphAI/Scrapegraph-ai
+Scrapy>=2.11.0
