Improve TON gateway probe throughput

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "screenshot:install": "npx playwright install --with-deps",
     "screenshot:preview": "npx playwright show-report",
     "tunnel:functions": "node scripts/ngrok-http.mjs",
-    "ton:generate-adnl": "tsx tools/ton/generate-adnl.ts"
+    "ton:generate-adnl": "tsx tools/ton/generate-adnl.ts",
+    "ton:site-status": "tsx tools/ton/check-site-status.ts"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.10.0",
