--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
     "posthog-js": "^1.268.8",
     "prismjs": "^1.30.0",
     "recharts": "^3.2.1",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "undici": "^6.22.0"
   },
   "devDependencies": {
     "chokidar-cli": "^3.0.0",
