Fix dynamic REST route configuration

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ NEXT_PUBLIC_COMMIT_SHA=
 
 # API caching
 CACHE_TTL_SECONDS=300
+DYNAMIC_API_CACHE_TTL_SECONDS=120
+DYNAMIC_REST_CACHE_TTL_SECONDS=300
 
 # Supabase (shared across apps and functions)
 # Use placeholder values here; never commit real credentials.
