feat: forward trading alerts through supabase function

--- a/.env.example
+++ b/.env.example
@@ -96,6 +96,9 @@ NEXT_PUBLIC_ECONOMIC_CALENDAR_API_KEY=
 TRADINGVIEW_WEBHOOK_SECRET=
 TRADINGVIEW_WEBHOOK_URL=https://www.tradingview.com/u/DynamicCapital-FX/
 TRADING_SIGNALS_WEBHOOK_SECRET=
+SUPABASE_TRADING_SIGNAL_SECRET=
+SUPABASE_TRADING_SIGNAL_URL=
+SUPABASE_WEBHOOK_TIMEOUT=5
 SUPABASE_SIGNALS_CHANNEL=
 EXNESS_MT5_LOGIN=
 EXNESS_MT5_PASSWORD=
